Added new recipes
Added recipe for corn ribes, puff pastry, images, links to index.html

--- a/recipes/stuffed-eggplant.html
+++ b/recipes/stuffed-eggplant.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Stuffed Eggplant</h1>
         <img src="../images/stuffed-eggplant.webp">
+        <p>Source: allrecipes <a href="https://www.allrecipes.com/recipe/38331/stuffed-eggplant/" target="_blank" rel="noopener noreferrer">Stuffed Eggplant by Elaina</a></p>
         <h2>Description</h2>
         <p>This stuffed eggplant recipe is healthy, filling, and will please even the pickiest eaters.</p>
         <h2>Ingredients</h2>
@@ -22,7 +23,7 @@
             <li>2 tablespoons chopped fresh basil</li>
             <li>1 cup tomato-basil pasta sauce</li>
             <li>3/4 cup italina seasoned panko bread crumbs, divided</li>
-            <li>1/2 cup grated PArmesan cheese, divided</li>
+            <li>1/2 cup grated Parmesan cheese, divided</li>
         </ul>
         <h2>Steps</h2>
         <ol>
