--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/stuffed-eggplant.html">Stuffed Eggplant</a></li>
-            <li></li>
-            <li></li>
+            <li><a href="recipes/corn-ribs.html">Corn Ribs</a></li>
+            <li><a href="recipes/puff-pastry-cherry-crostata.html">Puff Pastry Cherry Crostata</a></li>
         </ul>
     </body>
 </html>
